# retro-games

./: .gitignore  Cargo.toml  Makefile  Makefile.am  README  README.md  configure.ac  flake.nix  main.c  notes.md  retro-games
.direnv/: flake-profile-1-link
figlAsciiArt/: figlet_array.py  formatted_output.c  retro_games.txt
include/games/: games.h
include/games/breakout/: breakout.h
include/games/chess/: chess.h
include/games/pacman/: pacman.h
include/games/snake/: snake.h
include/ui/: ui.h
src/: main.rs  retro-games.c
src/games/: mod.rs  pong.rs  snake.rs
src/games/breakout/: breakout.c
src/games/chess/: chess.c
src/games/minesweeper/: minesweeper.c  minesweeper.h
src/games/pacman/: pacman.c
src/games/pong/: pong.c  pong.h
src/games/snake/: snake.c
src/games/sudoku/: sudoku.c  sudoku.h
src/games/tetris/: tetris.c  tetris.h
src/ui/: ui.c  ui.h
